Mostrar en header datos usuario y logout - Close #57

--- a/www/public/css/mystyles.css
+++ b/www/public/css/mystyles.css
@@ -28,6 +28,12 @@ body {
   border: 2px solid #29da29;
 }
 
+.user-header {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+}
+
 /*=====================================================================================
                 LOG IN - ACCESO
 ======================================================================================*/
