--- a/www/public/css/mystyles.css
+++ b/www/public/css/mystyles.css
@@ -34,6 +34,11 @@ body {
   border-radius: 50%;
 }
 
+.imgComm {
+  border-radius: 50%;
+  max-width: 70px;
+}
+
 /*=====================================================================================
                 LOG IN - ACCESO
 ======================================================================================*/
